# LogExtractor

./: .gitignore  CMakeLists.txt  README.md
src/: Log.cpp  main.cpp
src/include/: Log.h  cmdParser.h
